fixing all issue related to dark mode in the nav bar

--- a/styles/contactPage.css
+++ b/styles/contactPage.css
@@ -65,7 +65,7 @@
   box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
-  transition: 0.3s linear;
+  transition: 0.3s linear !important;
 }
 .contact-input-section:hover {
   box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.3);
